build-win-x86/contrib/zlib/zlib-1.3.2/configure.log
--------------------
./configure --prefix=/home/harshit/Swift/build-win-x86/contrib/ --static
Tue Jun 23 06:28:38 PM UTC 2026
=== ztest9941.c ===
extern int getchar();
int hello() {return getchar();}
===
/usr/bin/i686-w64-mingw32-gcc -c ztest9941.c
... using gcc

Checking for compiler...
=== ztest9941.c ===
int foo() { return 0; }
===
/usr/bin/i686-w64-mingw32-gcc -c ztest9941.c
Checking for obsessive-compulsive compiler options...
=== ztest9941.c ===
int foo() { return 0; }
===
/usr/bin/i686-w64-mingw32-gcc -c -I/home/harshit/Swift/build-win-x86/contrib/include -std=gnu99 -mfpmath=sse -msse2 -fstack-protector-strong -D_FORTIFY_SOURCE=2 -mno-ms-bitfields -O3 -fPIC ztest9941.c

Building static library libz.a version 1.3.2 with /usr/bin/i686-w64-mingw32-gcc.

=== ztest9941.c ===
#include <stdio.h>
#include <stdlib.h>
size_t dummy = 0;
===
/usr/bin/i686-w64-mingw32-gcc -c -I/home/harshit/Swift/build-win-x86/contrib/include -std=gnu99 -mfpmath=sse -msse2 -fstack-protector-strong -D_FORTIFY_SOURCE=2 -mno-ms-bitfields -O3 -fPIC ztest9941.c
Checking for size_t... Yes.

=== ztest9941.c ===
#include <sys/types.h>
off64_t dummy = 0;
===
/usr/bin/i686-w64-mingw32-gcc -c -I/home/harshit/Swift/build-win-x86/contrib/include -std=gnu99 -mfpmath=sse -msse2 -fstack-protector-strong -D_FORTIFY_SOURCE=2 -mno-ms-bitfields -O3 -fPIC -D_LARGEFILE64_SOURCE=1 ztest9941.c
Checking for off64_t... Yes.
Checking for fseeko... Yes.

=== ztest9941.c ===
#include <string.h>
#include <errno.h>
int main() { return strlen(strerror(errno)); }
===
/usr/bin/i686-w64-mingw32-gcc -I/home/harshit/Swift/build-win-x86/contrib/include -std=gnu99 -mfpmath=sse -msse2 -fstack-protector-strong -D_FORTIFY_SOURCE=2 -mno-ms-bitfields -O3 -fPIC -D_LARGEFILE64_SOURCE=1 -L/home/harshit/Swift/build-win-x86/contrib/lib -fstack-protector-strong -o ztest9941 ztest9941.c
Checking for strerror... Yes.

=== ztest9941.c ===
#include <unistd.h>
int main() { return 0; }
===
/usr/bin/i686-w64-mingw32-gcc -c -I/home/harshit/Swift/build-win-x86/contrib/include -std=gnu99 -mfpmath=sse -msse2 -fstack-protector-strong -D_FORTIFY_SOURCE=2 -mno-ms-bitfields -O3 -fPIC -D_LARGEFILE64_SOURCE=1 ztest9941.c
Checking for unistd.h... Yes.

=== ztest9941.c ===
#include <stdarg.h>
int main() { return 0; }
===
/usr/bin/i686-w64-mingw32-gcc -c -I/home/harshit/Swift/build-win-x86/contrib/include -std=gnu99 -mfpmath=sse -msse2 -fstack-protector-strong -D_FORTIFY_SOURCE=2 -mno-ms-bitfields -O3 -fPIC -D_LARGEFILE64_SOURCE=1 ztest9941.c
Checking for stdarg.h... Yes.

=== ztest9941.c ===
#include <stdio.h>
#include <stdarg.h>
#include "zconf.h"
int main()
{
#ifndef STDC
  choke me
#endif
  return 0;
}
===
/usr/bin/i686-w64-mingw32-gcc -c -I/home/harshit/Swift/build-win-x86/contrib/include -std=gnu99 -mfpmath=sse -msse2 -fstack-protector-strong -D_FORTIFY_SOURCE=2 -mno-ms-bitfields -O3 -fPIC -D_LARGEFILE64_SOURCE=1 ztest9941.c
Checking whether to use vs[n]printf() or s[n]printf()... using vs[n]printf().

=== ztest9941.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return 0;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
/usr/bin/i686-w64-mingw32-gcc -I/home/harshit/Swift/build-win-x86/contrib/include -std=gnu99 -mfpmath=sse -msse2 -fstack-protector-strong -D_FORTIFY_SOURCE=2 -mno-ms-bitfields -O3 -fPIC -D_LARGEFILE64_SOURCE=1 -L/home/harshit/Swift/build-win-x86/contrib/lib -fstack-protector-strong -o ztest9941 ztest9941.c
Checking for vsnprintf() in stdio.h... Yes.

=== ztest9941.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  int n;
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  n = vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return n;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
/usr/bin/i686-w64-mingw32-gcc -c -I/home/harshit/Swift/build-win-x86/contrib/include -std=gnu99 -mfpmath=sse -msse2 -fstack-protector-strong -D_FORTIFY_SOURCE=2 -mno-ms-bitfields -O3 -fPIC -D_LARGEFILE64_SOURCE=1 ztest9941.c
Checking for return value of vsnprintf()... Yes.

=== ztest9941.c ===
#define ZLIB_INTERNAL __attribute__((visibility ("hidden")))
int ZLIB_INTERNAL foo;
int main()
{
  return 0;
}
===
/usr/bin/i686-w64-mingw32-gcc -c -I/home/harshit/Swift/build-win-x86/contrib/include -std=gnu99 -mfpmath=sse -msse2 -fstack-protector-strong -D_FORTIFY_SOURCE=2 -mno-ms-bitfields -O3 -fPIC -D_LARGEFILE64_SOURCE=1 ztest9941.c
ztest9941.c:6:1: warning: visibility attribute not supported in this configuration; ignored [-Wattributes]
    6 | }
      | ^
Checking for attribute(visibility) support... No.
=== ztest9941.c ===
#ifndef __s390x__
    #error
#endif
===
/usr/bin/i686-w64-mingw32-gcc -c -I/home/harshit/Swift/build-win-x86/contrib/include -std=gnu99 -mfpmath=sse -msse2 -fstack-protector-strong -D_FORTIFY_SOURCE=2 -mno-ms-bitfields -O3 -fPIC -D_LARGEFILE64_SOURCE=1 ztest9941.c
ztest9941.c:2:6: error: #error 
    2 |     #error
      |      ^~~~~
(exit code 1)
Checking for s390x build ... No.

ALL = static all64
AR = /usr/bin/i686-w64-mingw32-ar
ARFLAGS = rc
CC = /usr/bin/i686-w64-mingw32-gcc
CFLAGS = -I/home/harshit/Swift/build-win-x86/contrib/include -std=gnu99 -mfpmath=sse -msse2 -fstack-protector-strong -D_FORTIFY_SOURCE=2 -mno-ms-bitfields -O3 -fPIC -D_LARGEFILE64_SOURCE=1
CPP =
EXE =
LDCONFIG = ldconfig
LDFLAGS = -L/home/harshit/Swift/build-win-x86/contrib/lib -fstack-protector-strong
LDSHARED = /usr/bin/i686-w64-mingw32-gcc
LDSHAREDLIBC = -lc
OBJC = $(OBJZ) $(OBJG)
PIC_OBJC = $(PIC_OBJZ) $(PIC_OBJG)
RANLIB = /usr/bin/i686-w64-mingw32-ranlib
SFLAGS = -I/home/harshit/Swift/build-win-x86/contrib/include -std=gnu99 -mfpmath=sse -msse2 -fstack-protector-strong -D_FORTIFY_SOURCE=2 -mno-ms-bitfields -O3 -fPIC -D_LARGEFILE64_SOURCE=1
SHAREDLIB =
SHAREDLIBM =
SHAREDLIBV =
STATICLIB = libz.a
TEST = all teststatic test64
VER = 1.3.2
SRCDIR =
exec_prefix = ${prefix}
includedir = ${prefix}/include
libdir = ${exec_prefix}/lib
mandir = ${prefix}/share/man
prefix = /home/harshit/Swift/build-win-x86/contrib/
sharedlibdir = ${libdir}
uname = Linux
HAVE_S390X = 0
HAVE_S390X_VX = 0
VGFMAFLAG =
--------------------


